client/src/app/consent/consent-card/consent-card.component.scss
.c2s-consent {
  //padding: 8px !important;

    .consent-card-header {
      margin: 0;
      padding: 10px;
      background-color: #bcdedb;
      white-space: inherit !important;
    }

    .consent-card-header:hover {
      background-color: rgba(63, 81, 181, 0.2);
    }

    //.mat-card-actions {
    //  margin: 10px !important;
    //}
    md-card-content {
      margin: 0 !important;
    }
    md-card-actions {
      margin: 0;
      padding: 0;
    }
    md-chip {
      margin: 0 5px 5px 0 !important;
      &:last-of-type {margin-bottom: 10px !important;}
    }


    .mat-chip.mat-chip-selected:not(.mat-basic-chip).mat-warn {
      background-color: #9C061C !important;
      //background-color: #f44336;
      color: white;
    }

}


.transition {
  overflow: hidden;
  -webkit-transition: height .5s;
  transition: height .5s;
}

.margin-20 {
  margin: 20px;
}

.medium-width {
  width: 80%;
}

